# gourmet_wiki-django

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  recipes.json  recipes_default.json  requirements.txt  test_recipes.json  vite.config.mjs
app/: Book_1_contents.md  Dockerfile  IMPRINT.md  PRIVACY.md  TERMS_OF_USE.md  entrypoint.sh  package-lock.json  package.json  pyproject.toml  recipe_template.json  recipes.json  recipes_default.json  requirements.in  requirements.txt  tailwind.config.js  test_error_pages.py  test_recipes.json  vite.config.mjs
app/DOCS/: MVP_ROADMAP.md  Setup.md
app/core/: apps.py  context_processors.py  middleware.py  models.py  ollama.py  seo.py  sitemaps.py  urls.py  utils.py  views.py  widgets.py
app/core/templatetags/: forms.py  seo.py  utils.py
app/gourmet_wiki/: asgi.py  context_processors.py  middleware.py  settings.py  urls.py
app/ingredients/: admin.py  final_ingredients.json  models.py  sitemaps.py  urls.py  usda_fdc.py  views.py
app/menus/: forms.py  models.py  sitemaps.py  views.py
app/pages/: urls.py  views.py
app/recipes/: admin.py  forms.py  formsets.py  models.py  seo_detail_views.py  sitemaps.py  urls.py  views.py
app/static/js/: main.js  (+6 more)
app/templates/: base.html  base_email.html  recipe_detail_seo.html  robots.txt
app/users/: adapter.py  adapters.py  admin.py  forms.py  managers.py  middleware.py  models.py  signals.py  urls.py  views.py
app/wiki/: admin.py  models.py  sitemaps.py  urls.py  views.py
(+408 files in other folders)
