[project]
name = "gourmet-wiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.4",
    "django>=5.2.1",
    "django-allauth>=65.9.0",
    "django-cotton>=2.1.2",
    "django-debug-toolbar>=5.2.0",
    "django-formtools>=2.5.1",
    "django-vite>=3.1.0",
    "pillow>=11.2.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
]
