[project]
name = "gourmet-wiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "crispy-daisyui>=0.7.0",
    "cryptography>=45.0.4",
    "django>=5.2.1",
    "django-allauth>=65.9.0",
    "django-cors-headers>=4.7.0",
    "django-cotton>=2.1.2",
    "django-crispy-forms>=2.4",
    "django-debug-toolbar>=5.2.0",
    "django-formtools>=2.5.1",
    "django-vite>=3.1.0",
    "easy-thumbnails>=2.10.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-ollama>=0.3.3",
    "pillow>=11.2.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
    "psycopg2-binary",
]
